# p2p-stream

./: .gitignore  Cargo.toml  flake.nix  out.csv
.github/appimage/: AppImageBuilder.yml  app.desktop
.github/workflows/: rust.yml
analysis/: README.md  analysis_metrics.R  analysis_plots.R  analysis_utils.R  analyze.R
libraries/network/: Cargo.toml
libraries/network/src/: gossipsub.rs  hybrid.rs  lib.rs  protocol.rs  stream.rs
libraries/recorder/: Cargo.toml
libraries/recorder/src/: lib.rs
libraries/renderer/: Cargo.toml
libraries/renderer/src/: lib.rs
libraries/video-reader/: Cargo.toml
libraries/video-reader/src/: lib.rs
src/: main.rs
stream_test/: Cargo.toml  run_matrix.sh
stream_test/src/: analyze.rs  capture.rs  main.rs  render.rs  screen_producer.rs
