[package]
name = "stream_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
tokio = "1.48.0"
env_logger = "0.11.8"
gstreamer = "0.24.1"
video-reader = { path = "../libraries/video-reader" }
renderer = { path = "../libraries/renderer" }
network = {path = "../libraries/network"}
csv = "1.4.0"
serde = { version = "1.0.225", features = ["derive"] }
clap = { version = "4.5.49", features = ["derive"]}
futures-util = "0.3.31"